[gd_scene load_steps=9 format=2]

[ext_resource path="res://Background/sky.png" type="Texture" id=1]
[ext_resource path="res://Background/pine2.png" type="Texture" id=2]
[ext_resource path="res://Fonts/EvilEmpire-4BBVK.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Scripts/UIManager.gd" type="Script" id=4]
[ext_resource path="res://UI/soundIcon.png" type="Texture" id=5]
[ext_resource path="res://UI/soundIcon-Mute.png" type="Texture" id=6]
[ext_resource path="res://Sounds/Music.wav" type="AudioStream" id=7]

[sub_resource type="DynamicFont" id=1]
size = 20
extra_spacing_char = 2
font_data = ExtResource( 3 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BG1" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 1 )

[node name="BG2" type="TextureRect" parent="BG1"]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Play" type="Button" parent="BG1/BG2"]
anchor_left = 0.493
anchor_top = 0.659
anchor_right = 0.493
anchor_bottom = 0.659
margin_left = -19.184
margin_top = -0.0490112
margin_right = 18.816
margin_bottom = 20.951
text = "Play"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Exit" type="Button" parent="BG1/BG2"]
anchor_left = 0.491
anchor_top = 0.825
anchor_right = 0.491
anchor_bottom = 0.825
margin_left = -38.808
margin_top = -0.0750122
margin_right = 38.192
margin_bottom = 20.925
text = "Exit Game"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Game Title" type="Label" parent="BG1/BG2"]
anchor_left = 0.496
anchor_top = 0.289
anchor_right = 0.496
anchor_bottom = 0.289
margin_left = -77.248
margin_top = 0.0209999
margin_right = 77.752
margin_bottom = 60.021
custom_fonts/font = SubResource( 1 )
text = "Run 
Astronaut 
Run"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SoundMute" type="TextureButton" parent="BG1/BG2"]
anchor_left = 1.0
anchor_top = 0.865
anchor_right = 1.0
anchor_bottom = 0.865
margin_left = -30.0
margin_top = -11.515
margin_right = -7.0
margin_bottom = 11.485
toggle_mode = true
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 6 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 7 )
autoplay = true

[connection signal="pressed" from="BG1/BG2/Play" to="." method="_on_Play_pressed"]
[connection signal="pressed" from="BG1/BG2/Exit" to="." method="_on_Exit_pressed"]
[connection signal="toggled" from="BG1/BG2/SoundMute" to="." method="_on_SoundMute_toggled"]
